page is not a redirection anymore.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html><head>
-<META HTTP-EQUIV=Refresh CONTENT="0; URL=http://pklaus.github.com/netio230a">
+<!--<META HTTP-EQUIV=Refresh CONTENT="0; URL=http://pklaus.github.com/netio230a">-->
 </head><body>
-At the moment there is only the site <a href="http://pklaus.github.com/netio230a">netio230a</a> online.
+Check out all my projects on <a href="http://github.com/pklaus">Github.com/pklaus</a>.
 </body></html>
