nice looking proxy page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,16 @@
-<html><head>
-<!--<META HTTP-EQUIV=Refresh CONTENT="0; URL=http://pklaus.github.com/netio230a">-->
-</head><body>
-Check out all my projects on <a href="http://github.com/pklaus">Github.com/pklaus</a>.
-</body></html>
+<html>
+  <head>
+    <title>Philipp Klaus on Github.com</title>
+    <!--<META HTTP-EQUIV=Refresh CONTENT="0; URL=http://pklaus.github.com/netio230a">-->
+    <link href="style.css" rel="stylesheet" type="text/css" media="screen" />
+    <meta name="google-site-verification" content="HKcyuSFjUDkKP3H7WrLEsCXBtZwIbkZ0StmqYEgmV8I" />
+  </head>
+  <body>
+    <div id="page">
+      <h2>Philipp Klaus's Github Website</h2>
+      <p>Welcome to my github website.
+        I have several open source projects hosted on github.com. You find them on <a href="http://github.com/pklaus">github.com/pklaus</a>.</p>
+      <p>For a full list of all my open source software projects and contributions have a look at my <a href="http://philippklaus.de">private website</a>.</p>
+    </div>
+  </body>
+</html>
