--- a/index.html
+++ b/index.html
@@ -1,16 +1,90 @@
+<!DOCTYPE html>
 <html>
-  <head>
-    <title>Philipp Klaus on Github.com</title>
-    <!--<META HTTP-EQUIV=Refresh CONTENT="0; URL=http://pklaus.github.com/netio230a">-->
-    <link href="style.css" rel="stylesheet" type="text/css" media="screen" />
-    <meta name="google-site-verification" content="HKcyuSFjUDkKP3H7WrLEsCXBtZwIbkZ0StmqYEgmV8I" />
-  </head>
-  <body>
-    <div id="page">
-      <h2>Philipp Klaus's Github Website</h2>
-      <p>Welcome to my github website.
-        I have several open source projects hosted on github.com. You find them on <a href="http://github.com/pklaus">github.com/pklaus</a>.</p>
-      <p>For a full list of all my open source software projects and contributions have a look at my <a href="http://philippklaus.de">private website</a>.</p>
+<head>
+  <title>Philipp Klaus's Github Repositories</title>
+  <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+  <meta name="google-site-verification" content="HKcyuSFjUDkKP3H7WrLEsCXBtZwIbkZ0StmqYEgmV8I" />
+  <!-- <link rel="shortcut icon" href="images/favicon.png">  -->
+  <!--  Let's include jQuery and jQuery UI (http://jqueryui.com) and the CSS
+        from Google CDN: http://code.google.com/intl/de/apis/libraries/devguide.html#jquery)  -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
+  <script src="jquery.sortElements.js"></script>
+  <!--  We include some Google Web Fonts (http://www.google.com/webfonts)  -->
+  <link href='http://fonts.googleapis.com/css?family=Salsa' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Averia+Libre' rel='stylesheet' type='text/css'>
+  <!--  Now follows our custom CSS -->
+  <style type="text/css">
+    /* CSS Document */
+    body{
+      margin: 0px;
+      font-family: Arial, Helvetica, sans-serif;
+      background-color: #FEFEFE;
+      border-top: 13px solid #479;
+    }
+    h1, h2, h3, h4, h5, h6, p, span { font-family: 'Salsa', cursive; }
+    h1 { margin: 10px auto; }
+    div#page { margin: 10px 30px 10px 30px; }
+    a:link, a:active,  a:visited {
+      color: #479;
+      text-decoration: none;
+    }
+    a:hover {
+      color:#256;
+      text-decoration: none;
+    }
+    div#container {
+      text-align: center;
+      margin: 10px auto;
+      width: 90%;
+      max-width: 990px;
+    }
+    div#repos {
+      margin: 10px auto;
+    }
+    div.repo {
+      font-family: 'Averia Libre', cursive;
+      float: left;
+      width: 32%;
+      max-width: 280px;
+      padding: 10px;
+      margin: 10px;
+      border: 1px solid grey;
+      background-color: #D0EAFF;
+      -moz-border-radius: 5px; border-radius: 5px;
+    }
+    div.reponame {
+      margin-bottom: 12px;
+      font-size: large;
+    }
+  </style>
+  <script type="text/javascript">
+    $(document).ready(function() {
+      $.getJSON('https://api.github.com/users/pklaus/repos?callback=?', function(data) {
+        var items = [];
+        $.each(data.data, function(key, repo) {
+          items.push('<div class="repo" title="' + repo.description + '"><div class="reponame"><a href="' + repo.html_url + '">' + repo.name + '</a></div><div class="repoforks"># of forks: ' + repo.forks + '</div><div class="repowatchers"># of watchers: ' + repo.watchers + '</div></div>');
+        });
+        $('<div/>', {
+          'id': 'repos',
+          html: items.join('')
+        }).appendTo('#container');
+      });
+    });
+    function compareWatchers(a, b) { return $(a).children('.repowatchers').text() < $(b).children('.repowatchers').text() ? 1 : -1; }
+    function compareForks(a, b) { return $(a).children('.repoforks').text() < $(b).children('.repoforks').text() ? 1 : -1; }
+    function sortByWatchers() { $('div.repo').sortElements(compareWatchers); }
+    function sortByForks() { $('div.repo').sortElements(compareForks); }
+  </script>
+</head>
+<body onload="javascript:sortByWatchers()">
+  <div id="page">
+    <div id="container">
+      <h1><a href="http://blog.philippklaus.de" alt="Philipp's private computing blog.">Philipp Klaus</a>'s <a href="https://github.com/pklaus">Github Repositories</a></h1>
+      <p>Here are the open source projects that I published on Github:</p>
+      <div id="links">
+        <a href="#" onclick="javascript:sortByWatchers()">sort by # of watchers</a> |
+        <a href="#" onclick="javascript:sortByForks()">sort by # of forks</a>
+      </div>
     </div>
-  </body>
-</html>
+  </div>
+</body>
