Adding a link to the beautiful timeline by Zach Moazeni.

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
   <div id="page">
     <div id="container">
       <h1><a href="http://blog.philippklaus.de" alt="Philipp's private computing blog.">Philipp Klaus</a>'s <a href="https://github.com/pklaus">Github Repositories</a></h1>
+      <p>Check out my <a href="http://zmoazeni.github.com/gitspective/#/timeline/pklaus" alt="Timeline of my activity on Github">Github timeline</a>!</p>
       <p>Here are the open source projects that I published on Github:</p>
       <div id="links">
         <a href="#" onclick="javascript:sortByWatchers()">sort by # of watchers</a> |
